<resources>
    <string name="app_name">Enigma_CinemaApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="movie_name">Nom du Film : </string>
    <string name="movie_date">Date du Film : </string>
    <string name="movie_time">Heure du Film : </string>
    <string name="movie_tvname">Entrer le nom du film</string>
    <string name="movieScenarioTextView">Note du Scénario :</string>
    <string name="movieRealTextView">Note de la Réalisation :</string>
    <string name="movieMusicTextView">Note de la Musique :</string>
    <string name="movieDescEditText">Description du film</string>
    <string name="movie_button">Sauvegarder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>