<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:ignore="MissingDefaultRessource"
tools:context=".FilmForm">


    <TextView
        android:id="@+id/TextViewMovieName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20sp"
        android:gravity="center"
        android:text="@string/movie_name"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/EditTextMovieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/TextViewMovieName"
        android:layout_toRightOf="@id/TextViewMovieName"
        android:hint="@string/movie_name" />

    <TextView
        android:id="@+id/TextViewDate"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@id/TextViewMovieName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:hint="@string/movie_date" />

    <TextView
        android:id="@+id/TextViewTime"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_below="@id/TextViewMovieName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="182dp"
        android:layout_marginLeft="182dp"
        android:layout_marginTop="61dp"
        android:layout_toEndOf="@id/TextViewDate"
        android:layout_toRightOf="@id/TextViewDate"
        android:gravity="center"
        android:hint="@string/movie_time" />

    <TextView
        android:id="@+id/TextViewScenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewDate"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:text="@string/movieScenarioTextView" />

    <Spinner
        android:id="@+id/SpinnerScenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewTime"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@id/TextViewScenario"
        android:layout_toRightOf="@id/TextViewScenario"
        android:entries="@array/notes_array"
        android:gravity="center" />

    <TextView
        android:id="@+id/TextViewRealisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewScenario"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="43dp"
        android:gravity="center"
        android:text="@string/movieRealTextView" />

    <Spinner
        android:id="@+id/SpinnerReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SpinnerScenario"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="38dp"
        android:layout_toEndOf="@id/TextViewRealisation"
        android:layout_toRightOf="@id/TextViewRealisation"
        android:entries="@array/notes_array"
        android:gravity="center" />

    <TextView
        android:id="@+id/TextViewMusique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewRealisation"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/movieMusicTextView" />

    <Spinner
        android:id="@+id/SpinnerMusique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SpinnerReal"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@id/TextViewMusique"
        android:layout_toRightOf="@id/TextViewMusique"
        android:entries="@array/notes_array"
        android:gravity="center" />

    <EditText
        android:id="@+id/EditTextMovieDesc"
        android:layout_width="349dp"
        android:layout_height="139dp"
        android:layout_below="@id/TextViewMusique"
        android:layout_marginTop="43dp"
        android:hint="@string/movieDescEditText"
        android:inputType="textMultiLine"
        android:lines="8"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/ButtonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditTextMovieDesc"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/movie_button" />

</RelativeLayout>